--- a/helm/otelcollector/collector.yaml
+++ b/helm/otelcollector/collector.yaml
@@ -13,21 +13,17 @@ spec:
 
     exporters:
       logging: 
-      # prometheus:
-      #   endpoint: "1.2.3.4:1234"
-      #   tls:
-      #     ca_file: "/path/to/ca.pem"
-      #     cert_file: "/path/to/cert.pem"
-      #     key_file: "/path/to/key.pem"
-      #   namespace: test-space
-      #   const_labels:
-      #     label1: value1
-      #     "another label": spaced value
-      #   send_timestamps: true
-      #   metric_expiration: 180m
-      #   enable_open_metrics: true
-      #   resource_to_telemetry_conversion:
-      #     enabled: true
+      prometheus:
+        endpoint: "1.2.3.4:1234"
+        namespace: test-space
+        const_labels:
+          label1: value1
+          "another label": spaced value
+        send_timestamps: true
+        metric_expiration: 180m
+        enable_open_metrics: true
+        resource_to_telemetry_conversion:
+          enabled: true
 
     service:
       pipelines:
@@ -35,3 +31,8 @@ spec:
           receivers: [jaeger]
           processors: []
           exporters: [logging]
+        metrics: 
+          receivers: [otlp]
+          processors: []
+          exporters: [logging, prometheus]
+
