update cert-manager local dev ca and set otel to use ClusterIssuer

--- a/helm/otelcollector/values.yaml
+++ b/helm/otelcollector/values.yaml
@@ -130,7 +130,7 @@ admissionWebhooks:
     enabled: true
     issuerRef: 
       kind: ClusterIssuer
-      name: selfsigned
+      name: ca-local-dev
 
 ## Create the provided Roles and RoleBindings
 ##
