--- a/helm/cert-manager/ClusterIssuer-dev-ca.yaml
+++ b/helm/cert-manager/ClusterIssuer-dev-ca.yaml
@@ -1,8 +1,8 @@
 apiVersion: cert-manager.io/v1
 kind: ClusterIssuer
 metadata:
-  name: ca-local-cert-manager
+  name: ca-local-dev
   namespace: cert-manager
 spec:
-  ca: 
+  ca:
     secretName: secret-ca-cert-manager
