--- a/helm/cert-manager/config.cnf
+++ b/helm/cert-manager/config.cnf
@@ -1,6 +1,7 @@
 [ req ]
 prompt = no
 distinguished_name = req_distinguished_name
+basicConstraints=CA:TRUE
 
 [ req_distinguished_name ]
 C = GB
@@ -8,5 +9,5 @@ ST = Test State
 L = Test Locality
 O = Org Name
 OU = Org Unit Name
-CN = luke local
+CN = luke local dev
 emailAddress = xactly@gmail.com
