--- a/fastapi-demo/test_deploy.yaml
+++ b/fastapi-demo/test_deploy.yaml
@@ -12,23 +12,42 @@ spec:
       labels:
         app: fastapi-demo
       annotations:
-        instrumentation.opentelemetry.io/inject-python: "my-instrumentation"
+        instrumentation.opentelemetry.io/inject-python: "default/my-instrumentation"
     spec:
       containers:
       - name: fastapi-demo
-        image: fastpai-admin-demoapp:v0.1
+        image: registry.localhost:5000/fastapi-demo:v0.1
 ---
-# TODO: add service
+apiVersion: v1
+kind: Service
+metadata:
+  labels:
+    app: fastapi-demo
+  name: fastapi-demo
+spec:
+  ports:
+  - name: web
+    port: 80
+    protocol: TCP
+    targetPort: 80
+  selector:
+    app: fastapi-demo
+  type: ClusterIP
 ---
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: fastapi-demo
   annotations:
-    ingress.kubernetes.io/ssl-redirect: "false"
+    ingress.kubernetes.io/ssl-redirect: "true"
+    cert-manager.io/cluster-issuer: "ca-local-dev"
 spec:
+  tls:
+    - hosts:
+        - fastapidemo.k3d.localhost
+      secretName: fastapidemo-k3d-localhost-tls
   rules:
-  - host: fastapidemo.k3d.localtest.me
+  - host: fastapidemo.k3d.localhost
     http:
       paths:
       - path: /
