--- a/helm/cert-manager/ClusterIssuer-dev-ca.yaml
+++ b/helm/cert-manager/ClusterIssuer-dev-ca.yaml
@@ -5,4 +5,4 @@ metadata:
   namespace: cert-manager
 spec:
   ca:
-    secretName: secret-ca-cert-manager
+    secretName: ca-local-dev-cert-manager
