--- a/helm/cert-manager/config.cnf
+++ b/helm/cert-manager/config.cnf
@@ -1,7 +1,7 @@
 [ req ]
 prompt = no
 distinguished_name = req_distinguished_name
-basicConstraints=CA:TRUE
+x509_extensions = v3_ca
 
 [ req_distinguished_name ]
 C = GB
@@ -9,5 +9,12 @@ ST = Test State
 L = Test Locality
 O = Org Name
 OU = Org Unit Name
-CN = luke local dev
-emailAddress = xactly@gmail.com
+CN = local dev
+emailAddress = dev@localhost
+
+[ v3_ca ]
+# Extensions for a typical CA (`man x509v3_config`).
+subjectKeyIdentifier = hash
+authorityKeyIdentifier = keyid:always,issuer
+basicConstraints = critical, CA:true
+keyUsage = critical, digitalSignature, cRLSign, keyCertSign
