fixes for otel and tempo connections

--- a/helm/otelcollector/Instrumentation.yaml
+++ b/helm/otelcollector/Instrumentation.yaml
@@ -4,7 +4,7 @@ metadata:
   name: my-instrumentation
 spec:
   exporter:
-    endpoint: http://my-collector-collector:14250
+    endpoint: my-collector-collector.otel-operator.svc.cluster.local:4317
   propagators:
     - tracecontext
     - baggage
@@ -12,3 +12,10 @@ spec:
   sampler:
     type: parentbased_traceidratio
     argument: "0.25"
+  python:
+    env:
+      # Required if endpoint is set to 4317.
+      # Python autoinstrumentation uses http/proto by default
+      # so data must be sent to 4318 instead of 4137.
+      - name: OTEL_EXPORTER_OTLP_ENDPOINT
+        value: http://my-collector-collector.otel-operator.svc.cluster.local:4318
