--- a/helm/otelcollector/collector.yaml
+++ b/helm/otelcollector/collector.yaml
@@ -2,6 +2,7 @@ apiVersion: opentelemetry.io/v1alpha1
 kind: OpenTelemetryCollector
 metadata:
   name: my-collector
+  namespace: otel-operator
 spec:
   mode: deployment # This configuration is omittable.
   config: |
@@ -9,30 +10,39 @@ spec:
       jaeger:
         protocols:
           grpc:
+      otlp:
+        protocols:
+          grpc:
+          http:
     processors:
-
+      memory_limiter:
+        check_interval: 1s
+        limit_percentage: 75
+        spike_limit_percentage: 15
+      batch:
+        send_batch_size: 10000
+        timeout: 10s
     exporters:
-      logging: 
-      prometheus:
-        endpoint: "1.2.3.4:1234"
-        namespace: test-space
-        const_labels:
-          label1: value1
-          "another label": spaced value
-        send_timestamps: true
-        metric_expiration: 180m
-        enable_open_metrics: true
+      logging:
+      prometheusremotewrite:
+        endpoint: "https://prom-operator-kube-prometh-prometheus:9090/api/v1/push"
+        namespace: prometheus
         resource_to_telemetry_conversion:
           enabled: true
-
+        external_labels:
+          server: opentelemetry
+      otlp:
+        endpoint: tempo.tempo.svc.cluster.local:4317
+        tls:
+          insecure: true
     service:
       pipelines:
         traces:
-          receivers: [jaeger]
-          processors: []
-          exporters: [logging]
+          receivers: [otlp, jaeger]
+          processors: [memory_limiter, batch]
+          exporters: [logging, otlp]
         metrics: 
           receivers: [otlp]
-          processors: []
-          exporters: [logging, prometheus]
+          processors: [memory_limiter,batch]
+          exporters: [logging, prometheusremotewrite]
 
