--- a/helm/prometheus/values.yaml
+++ b/helm/prometheus/values.yaml
@@ -737,7 +737,7 @@ grafana:
   ## Timezone for the default dashboards
   ## Other options are: browser or a specific timezone, i.e. Europe/Luxembourg
   ##
-  defaultDashboardsTimezone: utc
+  defaultDashboardsTimezone: Europe/London
 
   adminPassword: prom-operator
 
@@ -849,7 +849,27 @@ grafana:
 
   ## Configure additional grafana datasources (passed through tpl)
   ## ref: http://docs.grafana.org/administration/provisioning/#datasources
-  additionalDataSources: []
+  additionalDataSources: 
+    - name: Tempo
+      type: tempo
+      editable: true
+      isDefault: false
+      access: proxy
+      url: http://tempo.tempo.svc.cluster.local:3100
+      uid: tempo
+      version: 1
+      jsonData:
+        httpMethod: GET
+        # tracesToLogs:
+        #   datasourceUid: loki
+        serviceMap:
+          datasourceUid: 'prometheus'
+        search:
+          hide: false
+        nodeGraph:
+          enabled: true
+        # lokiSearch:
+        #   datasourceUid: loki
   # - name: prometheus-sample
   #   access: proxy
   #   basicAuth: true
@@ -900,7 +920,13 @@ grafana:
     #   targetLabel: nodename
     #   replacement: $1
     #   action: replace
-
+  ## CUSTOM DASHBOARDS SETUP (NOT PART OF DEFAULT HELM VALUES)
+  dashboardProviders:
+    dashboardproviders.yaml: 
+      apiVersion: 1
+      providers:
+      - name: 'default'
+  14584
 ## Component scraping the kube api server
 ##
 kubeApiServer:
