--- a/taskfiles/baseservices.yaml
+++ b/taskfiles/baseservices.yaml
@@ -3,18 +3,43 @@
 version: '3'
 
 tasks:
+
   setup_helm_repos:
     cmds:
       - helm repo add argo https://argoproj.github.io/argo-helm
-      - helm repo update
+      - helm repo update argo #+ jetstack,prometheus-community, grafana,...
     internal: true
 
   setup_argocd:
     deps: [setup_helm_repos]
     cmds:
       - helm upgrade -i -n argocd --create-namespace argocd argo/argo-cd -f helm/argocd/values.yaml
-      - echo "Helm setep, login with user admin and password - "
-      - kubectl -n argocd get secret argocd-initial-admin-secret -o jsonpath="{.data.password}" | base64 
+      - echo "Helm setep complete"
+      ## this looks like it can fail as the secret isn't created yet - might need to visit login page for secret to be created
+      - |
+        #request argocd page to see if this prompts creating the initial admin password secret
+        #curl -o /dev/null https://argocd.k3d.localhost
+        echo "Waiting for argocd initial password to be created"
+        sleep 5
+        kubectl get secret -n argocd argocd-initial-admin-secret || true
+        while ! kubectl get secret -n argocd argocd-initial-admin-secret >/dev/null 2>&1; do (echo -n "." ; sleep 1); done
+        echo
+        echo "Login at https://argocd.k3d.localhost with user admin and password - "
+        echo $(kubectl -n argocd get secret argocd-initial-admin-secret -o jsonpath="{.data.password}" | base64 -d)
+      - task: sync_argocd_login
+  
+  sync_argocd_login:
+    cmds: 
+      - |
+        echo "logging in with user: admin password: {{.ARGO_ADMIN_PASSWORD}}"
+        argocd login argocd.k3d.localhost --insecure --grpc-web --name local-dev --username admin --password "{{.ARGO_ADMIN_PASSWORD}}"
+    vars:
+      ARGO_ADMIN_PASSWORD:
+        sh: echo $(kubectl -n argocd get secret argocd-initial-admin-secret -o jsonpath="{.data.password}" | base64 -d)
+
+  sync_argocd_repo:
+    cmds: 
+      - argocd sync --local --folder
   
   create_CA_cert:
     env:
@@ -39,17 +64,12 @@ tasks:
         else
           echo "${OS_CERT_PATH} already setup - skipping cp and update-ca-certificates"
         fi
-        certutil -d sql:$HOME/.pki/nssdb -A -t "CT,c,c" -n cert-manager-local-dev-ca -i "$data/ca.crt"
+        certutil -d sql:$HOME/.pki/nssdb -A -t "CT,c,c" -n cert-manager-local-dev-ca -i "data/ca.crt"
         certutil -L -d sql:$HOME/.pki/nssdb
         certutil -d sql:$HOME/.pki/nssdb -L -n cert-manager-local-dev-ca
-
-  sync_argocd_repo:
-    cmds: 
-      - 
-
+  
   setup_services:
     cmds:
-      - task: create_CA_cert
+      - task: create_CA_cert #do this first to prepare the CA and redner the asset for argo to use
       - task: setup_argocd
-      - task: sync_argocd_repo
-    
+      #- task: sync_argocd_repo
