update default domain to only be 1 level deep under localhost to avoid golang clib failure

--- a/argo-k3d-deployments/testapp/testapplication.yaml
+++ b/argo-k3d-deployments/testapp/testapplication.yaml
@@ -5,9 +5,9 @@ metadata:
   namespace: testapp
 spec:
   destination:
-    namespace: testap
-    server: https://kubernetes.default.svc 
-  project: default 
+    namespace: testapp
+    server: https://kubernetes.default.svc
+  #project: default 
   source: 
     path: testapp/
   syncPolicy: 
