--- a/helm/argocd/values.yaml
+++ b/helm/argocd/values.yaml
@@ -1632,7 +1632,7 @@ server:
     ## Hostnames must be provided if Ingress is enabled.
     ## Secrets must be manually created in the namespace
     hosts: 
-      - argocd.k3d.localhost
+      - argocd-k3d.localhost
       # - argocd.example.com
 
     # -- List of ingress paths
@@ -1654,7 +1654,7 @@ server:
     tls: 
       - secretName: argocd-k3d-localhost-tls
         hosts:
-          - argocd.k3d.localhost
+          - argocd-k3d.localhost
       # - secretName: your-certificate-name
       #   hosts:
       #     - argocd.example.com
