--- a/argo-k3d-deployments/testapp/manifest.yaml
+++ b/argo-k3d-deployments/testapp/manifest.yaml
@@ -2,7 +2,7 @@ apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
   name: testapp
-  namespace: testapp
+  namespace: argocd
 spec:
   destination:
     namespace: testapp
