--- a/argo-k3d-deployments/testapp2/testunvalidateddeployment.yaml
+++ b/argo-k3d-deployments/testapp2/testunvalidateddeployment.yaml
@@ -1,30 +1,30 @@
 apiVersion: v1
 kind: Namespace
 metadata:
-  name: testapp
+  name: testapp2
   annotations:
     owner: argocd
-    app: testapp
+    app: testapp2
 ---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
   labels:
-    app: testapp
-  name: testapp
-  namespace: testapp
+    app: testapp2
+  name: testapp2
+  namespace: testapp2
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: testapp
+      app: testapp2
   strategy: {}
   template:
     metadata:
       labels:
-        app: testapp
+        app: testapp2
     spec:
       containers:
       - image: nginx:latest
-        name: testapp
+        name: testapp2
         resources: {}
