--- a/argocd/base-services-project.yaml
+++ b/argocd/base-services-project.yaml
@@ -2,7 +2,7 @@ apiVersion: argoproj.io/v1alpha1
 kind: AppProject
 metadata:
   name: base-services
-  namespace: base-services
+  namespace: argocd
   finalizers:
   - resources-finalizer.argocd.argoproj.io
 spec:
@@ -10,9 +10,9 @@ spec:
   destinations:
   - namespace: '*'
     server: https://kubernetes.default.svc
-  # clusterResourceWhitelist:
-  # - group: '*'
-  #   kind: '*'
-  # sourceRepos:
-  # - '*'
+  clusterResourceWhitelist:
+  - group: '*'
+    kind: '*'
+  sourceRepos:
+  - '*'
   
